--- a/package.json
+++ b/package.json
@@ -1,17 +1,25 @@
 {
-  "name": "radius-message-api",
+  "name": "RadJS",
   "version": "1.0.0",
   "description": "",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node app.js"
+    "install-windows-service": "node_modules\\.bin\\winser -i",
+    "uninstall-windows-service": "node_modules\\.bin\\winser -r"
   },
-  "author": "",
-  "license": "ISC",
+  "author": "Ilya Tovbin",
+  "license": "",
   "dependencies": {
     "activedirectory": "^0.7.2",
+    "express-pouchdb": "^4.2.0",
+    "fs": "0.0.1-security",
+    "mail": "^0.2.3",
+    "node-simple-logger": "0.0.1",
+    "pouchdb": "^7.2.1",
     "radius": "^1.1.2",
-    "request": "^2.73.0"
+    "randomatic": "^3.1.1",
+    "request": "^2.73.0",
+    "simple-node-logger": "^18.12.24",
+    "winser": "^1.0.3"
   }
 }
